<!-- 
Author: Victor Malchikov
FileName: strings.xml
Objective: This file contains Strings used in the application.
           You are able to see the variable names and 
           the corresponding text. -->
           
 <resources>

    <string name="app_name">TemperatureConverter</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_temperature_converter">Temperature Converter</string>
    <string name="celcius">"Celcius to Fahrenheit"</string>
    <string name="fahrenheit">"Fahrenheit to Celcius"</string>
    <string name="convert">"Convert:"</string>
    <string name="result">"Result: "</string>
 	<string name="hint">"Enter Temperature"</string>
 	<string name="answer">"Your answer will appear here"</string>

</resources>