<!-- 
Author: Victor Malchikov
FileName: 
Objective: This file takes care of entire layout of application.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	>
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:textSize="@dimen/title_size"
        android:textColor="@color/blue"
        android:text="@string/title_activity_temperature_converter"
        />
    
    <RadioGroup 
        android:orientation="vertical" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
    
        <RadioButton
            android:id="@+id/celcius_to_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/celcius"
            android:onClick="buttonSelectionHandler"
            android:checked="true"
            />
            
        <RadioButton
            android:id="@+id/fahrenheit_to_celcius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:textColor="@color/red"
            android:text="@string/fahrenheit"
            android:onClick="buttonSelectionHandler"
            />
            
    </RadioGroup>
	
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="left"
        	android:text="@string/convert"
			/>
    
   		<EditText
   	 		android:id="@+id/input_temp"
      		android:inputType="number|numberDecimal|numberSigned|text"
      		android:textSize="@dimen/input_size"
      		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
     		android:hint="@string/hint"
        	/>
 
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    	
    	<TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="left"
        	android:text="@string/result"
			/>
    
   	    <EditText
   	 		android:id="@+id/calculated_result"
      		android:inputType="text"
      		android:textSize="@dimen/input_size"
      		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
     		android:hint="@string/answer"
        	/> 

 
	</LinearLayout>
	    

</LinearLayout>
